# Anomaly-Detection-WebApp

./: CPP_SERVICE  README.md
AnomalyDetectionWebCPPSIDE/: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  Server.cpp  Server.h  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  main.cpp  timeseries.cpp  timeseries.h
controller/: index.js
model/: detector.js
view/: index.css  index.html
